--- a/src/index.htm
+++ b/src/index.htm
@@ -7,9 +7,15 @@
 </head>
 
 <body>
-  <h1>Webpack - TypeScript - Scss</h1>
-  <h2>TypeScript Hello World</h2>  
-  <div id="content"></div>
+  <h1>String manipulations</h1>
+  <input type="text" id ="input">
+  <select id="letters">
+<option value="upper">Upper case</option>
+<option value="lower">Lower case</option>
+  </select>
+  <button id="doit" > Do it!</button> <br>
+  <table id ="table">  
+  </table>
     
   <script src="bundle.js"></script>
 </body>
